--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ http://www.templatemo.com/tm-474-app-landing
             <div class="templatemo_home_inner_wapper">
                 <h2 class="text-center">GAME Jinxxx</h2>
                 <p class="text-center">
-                    This is a one stop gaming destination ,where we will be providing wiht you some amazing fun games
+                    Play games to enhance your concentration
                 </p>
             </div>
             <div class="templatemo_home_inner_wapper btn_wapper">
@@ -78,7 +78,7 @@ http://www.templatemo.com/tm-474-app-landing
     <section id="templatemo_features">
         <div class="container-fluid">
             <header class="template_header">
-                <h1 class="text-center"><span>...</span> Relive your Childhood<span> ...</span></h1>
+                <h1 class="text-center"><span>...</span> Increase your Attention Span<span> ...</span></h1>
             </header>
             <div class="col-sm-12">
                 <div class="col-sm-6 col-lg-3 feature-box">
